--- a/template.yml
+++ b/template.yml
@@ -8,7 +8,7 @@
        SecurityGroups:
          - !Ref InstanceSecurityGroup
        # Change this, as applicable to you      
-       KeyName: LinhND54.pem
+       KeyName: LinhND54
        # Change this, as applicable to you
        # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
        ImageId: 'ami-053b0d53c279acc90' 
