--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,27 @@ jobs:
                   --template-file template.yml \
                   --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
                   --region us-east-1
+     # Exercise: Config and Deployment
+    configure_infrastructure: 
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+            # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["75:5f:b3:48:b2:6b:4c:b7:92:94:00:81:fe:5e:b4:56"] 
+        - run:
+            name: Install Ansible
+            command: |
+              apk add --update ansible
+        - run:
+            name: Run Playbook and Configure server
+            command: |
+              ansible-playbook -i inventory.txt main4.yml
 # Sequential workflow
 workflows:
     # Name the workflow
     myWorkflow:
       jobs:
         - create_infrastructure
+        - configure_infrastructure
