--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,17 @@
 version: 2.1
 jobs:
-    create_infrastructure: 
-        docker:
-          - image: amazon/aws-cli
-        steps:
-          - checkout
-          - run:
-              name: Create Cloudformation Stack
-              command: |
-                aws cloudformation deploy \
-                  --template-file template.yml \
-                  --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-                  --region us-east-1
+    # create_infrastructure: 
+    #     docker:
+    #       - image: amazon/aws-cli
+    #     steps:
+    #       - checkout
+    #       - run:
+    #           name: Create Cloudformation Stack
+    #           command: |
+    #             aws cloudformation deploy \
+    #               --template-file template.yml \
+    #               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+    #               --region us-east-1
      # Exercise: Config and Deployment
     configure_infrastructure: 
       docker:
@@ -34,5 +34,5 @@ workflows:
     # Name the workflow
     myWorkflow:
       jobs:
-        - create_infrastructure
+        # - create_infrastructure
         - configure_infrastructure
