--- a/template.yml
+++ b/template.yml
@@ -6,19 +6,27 @@
      Type: 'AWS::EC2::Instance'
      Properties:
        SecurityGroups:
-         - !Ref InstanceSecurityGroup
+         - !Ref MySecurityGroup
        # Change this, as applicable to you      
        KeyName: LinhND54
        # Change this, as applicable to you
        # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
        ImageId: 'ami-053b0d53c279acc90' 
        InstanceType: t3.micro
-   InstanceSecurityGroup:
-     Type: 'AWS::EC2::SecurityGroup'
+   MySecurityGroup:
+     Type: AWS::EC2::SecurityGroup
      Properties:
-       GroupDescription: Enable SSH access via port 22
+       GroupDescription: My Security Group
        SecurityGroupIngress:
          - IpProtocol: tcp
-           FromPort: '22'
-           ToPort: '22'
-           CidrIp: 0.0.0.0/0 
+           FromPort: 80
+           ToPort: 80
+           CidrIp: 0.0.0.0/0
+         - IpProtocol: tcp
+           FromPort: 443
+           ToPort: 443
+           CidrIp: 0.0.0.0/0
+         - IpProtocol: tcp
+           FromPort: 3000
+           ToPort: 3000
+           CidrIp: 0.0.0.0/0
