--- a/template.yml
+++ b/template.yml
@@ -19,6 +19,10 @@
        GroupDescription: My Security Group
        SecurityGroupIngress:
          - IpProtocol: tcp
+           FromPort: 22
+           ToPort: 22
+           CidrIp: 0.0.0.0/0
+         - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
