--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,8 @@ jobs:
         - run:
             name: Run Playbook and Configure server
             command: |
-              ansible-playbook -i inventory.txt main4.yml
+              aws iam list-users
+
 # Sequential workflow 
 workflows:
     # Name the workflow
