--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,7 @@
 version: 2.1
+orbs:
+  aws-cli: circleci/aws-cli@2.0.3
 jobs:
-    # create_infrastructure: 
-    #     docker:
-    #       - image: amazon/aws-cli
-    #     steps:
-    #       - checkout
-    #       - run:
-    #           name: Create Cloudformation Stack
-    #           command: |
-    #             aws cloudformation deploy \
-    #               --template-file template.yml \
-    #               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-    #               --region us-east-1
-     # Exercise: Config and Deployment
     configure_infrastructure: 
       docker:
         - image: python:3.7-alpine3.11
@@ -25,15 +14,12 @@ jobs:
         - run:
             name: Install Ansible
             command: |
-              apk update && \
-              apk add --no-cache \
-              openssh-keygen && \
               apk add --update ansible
 
         - run:
             name: Run Playbook and Configure server
             command: |
-              ssh-keygen -l -f /root/.ssh/authorized_keys
+              ansible-playbook -i inventory.txt main4.yml
 
 # Sequential workflow 
 workflows:
