--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
     configure_infrastructure: 
       docker:
-        - image: python:3.7-alpine3.11
+        - image: python:3.9.17-slim-bullseye
       steps:
         - checkout
         - add_ssh_keys:
