--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,17 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+# Use a package of configuration called an orb.
 orbs:
   aws-cli: circleci/aws-cli@2.0.3
 jobs:
+  # Exercise: Config and Deployment
   configure_infrastructure: 
     docker:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["c9:ab:c3:c2:3f:43:7f:66:bd:5f:c4:ca:7a:64:06:fe"] # You can get this ID in the section where you registered the SSH Key
+          fingerprints: ["0c:55:f7:d7:ad:e3:73:19:0b:e6:c6:46:5c:04:76:94"] # You can get this ID in the section where you registered the SSH Key
       - run:
           name: Install Ansible
           command: |
@@ -19,6 +22,8 @@ jobs:
           command: |
             ansible-playbook -i inventory.txt main4.yml
 workflows:
-    myWorkflow:
-      jobs:
-        - configure_infrastructure
+  # Name the workflow "welcome"
+  my_workflow:
+    # Run the welcome/run job in its own container
+    jobs:
+      - configure_infrastructure
