--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,18 @@ jobs:
       - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints: 
+            - "c5:e0:9c:5c:a8:12:a7:77:68:55:06:f5:98:9a:ea:b0"
       - run:
           name: Install Ansible
           command: |
             # install the dependencies needed for your playbook
             apk add --update ansible 
+      - run:
+          name: Check version ansible --version
+          command: |
+            ansible --version
       - run:
           name: Run Playbook and Configure server
           command: |
