--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,5 +49,5 @@ workflows:
   my_workflow:
     # Run the welcome/run job in its own container
     jobs:
-      - configure_infrastructure
+      # - configure_infrastructure
       - smoke_test
